Implement URL processing workflow with scraping and summarization services
- Added MockSummarizationService for testing and development.
- Created OllamaApiClient for interacting with the Ollama API.
- Developed footer and header components for the Streamlit app.
- Implemented query page components for chat functionality.
- Added URL input page with responsive design and error handling.
- Defined protocols for scraping and summarization services.
- Built scraping service with URL validation and content extraction.
- Developed summarization service utilizing the LLM API.
- Created integration tests for URL processing workflow.
- Implemented unit tests for scraping and summarization services.

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# Streamlit Configuration
+# --- Streamlit Configuration ---
 HOST_IP=127.0.0.1
 HOST_PORT=8501
 TEST_PORT=8502
 DEV_PORT=8503
 
-# Debug Configuration
+# --- Debug Configuration ---
 DEBUG=true
 
-# Ollama API Configuration
+# --- Ollama API Configuration ---
 OLLAMA_API_ENDPOINT=http://localhost:11434
 OLLAMA_MODEL=qwen3:0.6b
