--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pandas = "^2.0.0"
 numpy = ">=1.26.0,<2.0"
 plotly = "^5.17.0"
 httpx = "^0.28.1"
+beautifulsoup4 = "^4.12.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
