--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,39 @@
-[tool.poetry]
+[project]
 name = "st-bubble-chat"
 version = "0.1.0"
 description = "A Streamlit component to create a bubble-style chat UI."
-authors = ["akitorahayashi <atora.has75@gmail.com>"]
+authors = [
+    {name = "akitorahayashi", email = "atora.has75@gmail.com"}
+]
 readme = "README.md"
-package-mode = false
+requires-python = ">=3.12"
+dependencies = [
+    "streamlit>=1.49.1",
+    "pandas>=2.0.0",
+    "numpy>=1.26.0,<2.0",
+    "plotly>=5.17.0",
+    "httpx>=0.28.1",
+    "beautifulsoup4>=4.12.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.4.1",
+    "black>=25.1.0",
+    "ruff>=0.12.11",
+    "ipython>=9.5.0",
+    "selenium>=4.0.0",
+    "python-dotenv>=1.0.0",
+    "requests>=2.31.0",
+    "pytest-asyncio>=1.1.0",
+]
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry.dependencies]
-python = ">=3.12,<4.0"
-streamlit = "^1.49.1"
-pandas = "^2.0.0"
-numpy = ">=1.26.0,<2.0"
-plotly = "^5.17.0"
-httpx = "^0.28.1"
-beautifulsoup4 = "^4.12.0"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.4.1"
-black = "^25.1.0"
-ruff = "^0.12.11"
-ipython = "^9.5.0"
-selenium = "^4.0.0"
-python-dotenv = "^1.0.0"
-requests = "^2.31.0"
-pytest-asyncio = "^1.1.0"
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
 
 [tool.pytest.ini_options]
 python_files = "test_*.py"
