Add activation of virtual environment in format-and-lint and run-tests workflows

--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -21,5 +21,8 @@ jobs:
       - name: Install dependencies
         run: uv sync --extra dev
 
+      - name: Activate virtual environment
+        run: source .venv/bin/activate
+
       - name: Run Linters
         run: make lint
