--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -21,7 +21,7 @@ jobs:
           python-version-file: '.python-version'
 
       - name: Install uv
-        run: brew install uv
+        run: pipx install uv
 
       - name: Install dependencies
         run: uv sync --extra dev
