Remove virtual environment activation and update linting and testing commands to use 'uv run'

--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -21,8 +21,5 @@ jobs:
       - name: Install dependencies
         run: uv sync --extra dev
 
-      - name: Activate virtual environment
-        run: source .venv/bin/activate
-
       - name: Run Linters
-        run: make lint
+        run: uv run make lint
