--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,10 +29,7 @@ jobs:
       - name: Create .env file for CI
         run: cp .env.example .env
 
-      - name: Activate virtual environment
-        run: source .venv/bin/activate
-
       - name: Run tests
         env:
           SUDO: ${{ secrets.SUDO || 'true' }}
-        run: make ${{ matrix.test_target }}
+        run: uv run make ${{ matrix.test_target }}
