Update black and ruff configuration to exclude additional virtual environment files and directories

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,12 +43,16 @@ asyncio_mode = "auto"
 [tool.black]
 target-version = ['py312']
 exclude = '''
-/(\
+/(
     \.git
     | \.mypy_cache
     | \.venv
+    | venv
+    | env
     | build
     | dist
+    | [^/]*/(bin|lib|share|etc)/.*
+    | [^/]*/pyvenv\.cfg
 )/
 '''
 
@@ -59,7 +63,15 @@ exclude = [
 	"__pycache__",
 	"migrations",
 	"db.sqlite3",
-	"*.pyc"
+	"*.pyc",
+	".venv",
+	"venv",
+	"env",
+	"*/bin/**",
+	"*/lib/**",
+	"*/share/**",
+	"*/etc/**",
+	"*/pyvenv.cfg"
 ]
 
 [tool.ruff.lint]
