Update API endpoint to use 127.0.0.1 and adjust sidebar layout configuration

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,5 @@ DEV_PORT=8503
 DEBUG=true
 
 # --- Ollama API Configuration ---
-OLLAMA_API_ENDPOINT=http://localhost:11434
+OLLAMA_API_ENDPOINT=http://127.0.0.1:11434
 OLLAMA_MODEL=qwen3:0.6b
