--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "plotly>=5.17.0",
     "httpx>=0.28.1",
     "beautifulsoup4>=4.12.0",
+    "watchdog>=6.0.0",
 ]
 
 [project.optional-dependencies]
