--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,5 +77,5 @@ exclude = [
 
 [tool.ruff.lint]
 select = ["E", "F", "I"]
-# E501 (line too long) and F841 (unused variable) are ignored
-ignore = ["E501", "F841"]
+# E501 (line too long) is ignored
+ignore = ["E501"]
