--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        test_target: [unit-test, build-test, e2e-test, intg-test]
+        test_target: [unit-test, build-test, e2e-test]
       fail-fast: false
 
     steps:
