--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,12 +24,10 @@ jobs:
         run: pipx install uv
 
       - name: Install dependencies
-        run: uv sync --extra dev
+        run: uv sync --frozen
 
-      - name: Create .env file for CI
+      - name: Create .env file from example
         run: cp .env.example .env
 
       - name: Run tests
-        env:
-          SUDO: ${{ secrets.SUDO || 'true' }}
         run: uv run make ${{ matrix.test_target }}
