--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,8 @@ dev = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src"]
+[tool.uv]
+package = false
 
 [tool.pytest.ini_options]
 python_files = "test_*.py"
