--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ HOST_IP=127.0.0.1
 HOST_PORT=8501
 TEST_PORT=8502
 DEV_PORT=8503
+MAX_PROMPT_LENGTH=5000
 
 # --- Debug Configuration ---
 DEBUG=true
