--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = [
     "python-dotenv>=1.0.0",
     "requests>=2.31.0",
     "pytest-asyncio>=1.1.0",
+    "toml>=0.10.2",
 ]
 
 [build-system]
