--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "langchain-text-splitters>=0.2.0",
     "watchdog>=6.0.0",
+    "pyperclip>=1.9.0",
 ]
 
 [dependency-groups]
